cmake_minimum_required(VERSION 3.10)
project(List C)


set(SOURCE_FILES library.c)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin/Lib)
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin/LibA)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin/Lib)

add_library(${PROJECT_NAME} MODULE ${SOURCE_FILES})

#install(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../Install/Lib)